force-app/main/default/objects/ScrapType__c/ScrapType__c.object-meta.xml
<CustomObject>
    <label>Довідник брухту</label>
    <nameField>
        <label>Назва</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Довідник брухту</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>