force-app/main/default/objects/ScrapType__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <formula>Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Група</label>
    <type>Text</type>
</CustomField>