force-app/main/default/objects/ScrapType__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>Код в ERP ІТ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>