force-app/main/default/objects/ScrapType__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Активний</label>
    <type>Checkbox</type>
</CustomField>