force-app/main/default/objects/ScrapType__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ScrapType__c</referenceTo>
    <relationshipName>Scrap_Types</relationshipName>
    <type>Lookup</type>
</CustomField>