force-app/main/default/objects/ScrapType__c/fields/SandParent__c.field-meta.xml
<CustomField>
    <fullName>SandParent__c</fullName>
    <label>SandParent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>