force-app/main/default/objects/ScrapType__c/fields/ScrapTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ScrapTypeCode__c</fullName>
    <label>Код</label>
    <length>25</length>
    <type>Text</type>
</CustomField>