force-app/main/default/objects/ScrapType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>GroupName__c</columns>
    <columns>ScrapTypeCode__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>